Fix HuggingFace cache location and download issues on Windows
- Set HF_HOME to project .cache directory to avoid filling C: drive
- Disable hf_transfer for more reliable downloads on Windows
- Update default dataset to HuggingFaceH4/ultrachat_200k
- Exclude models/ directory from version control

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ dist/
 build/
 
 # Model checkpoints (large files)
-models/checkpoints/
+models/
 *.bin
 *.safetensors
 *.pt
@@ -31,6 +31,7 @@ data/processed/
 # IDE
 .vscode/
 .idea/
+.claude/
 *.swp
 *.swo
 
