--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,8 @@ runs/
 # HuggingFace cache
 .cache/
 
-# Project notes (local only)
+# Markdown files (local notes, except README)
+TRAINING_NOTES.md
 NOTES.md
 claude.md
 
